--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body, a:link, a:visited, a:active{
   width: 100px;
   border: none;
   transform:rotate(7deg);
-  background-image: url("src/fireball.png");
+  background-image: url("images/fireball.png");
   background-size: 100%;
   background-repeat: no-repeat;
 }
